syntax = "proto3";
package auth;

service Auth {
  rpc Register (RegisterRequest) returns (RegisterResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
}

message RegisterResponse {}
